# gst

./: .gitignore  README.md  bin.go  buffer.go  bytepool.go  callback.c  callback.go  callback.h  callback_test.go  element.go  go.mod  gst.c  gst.go  gst.h  gst_test.go  loop.go  pipeline.go  plugin.go  speed_test.go  structure.go  tutils.go  vfilter.go  vtransform.go
examples/addtext/subtitles/: subtitels.go
examples/addtext/tomovie/: tomovie  tomovie.go
examples/addtext/toscreen/: toscreen  toscreen.go
examples/appsinkex/: appsinkex.go
examples/camui/: camui.go  player.go
examples/camui/ui/: cam.ui
examples/gtktsink/: gtksink.go
examples/noise/: recoder.go
examples/plugin/line/: README.rst  line.go
examples/plugin/movingline/: README.rst  movingline.go
examples/plugin/sobel/: filter.go  sobel.go
examples/plugin/temporalmedian/: temporalmedian.go
examples/plugin/tmpmf/: tmpmf.go  tmpmf_test.go
examples/rect01/: rect01.go
examples/videorec/: player.go  recoder.go  videorec  videorec.go  viderec.go
examples/videorecui/: appsink.go  appsrc.go  bridge.go  player.go  recoder.go  recoder.goo  viderec.go
examples/videorecui/ui/: videorec.ui
goplugin/: gstgocallback.h
goplugin/_build/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  config.h
goplugin/_build/meson-info/: intro-buildoptions.json  meson-info.json  (+5 more)
plugins-base/goplugin/: gstgocallback.c  meson.build
plugins-base/videofilter/: gstgovideocallback.c  gstgovideocallback.h
testsuite/: gosuite.go
videofilter/: gstgovideocallback.c  gstgovideocallback.h  meson.build
(+5 files in other folders)
